Add header and home section to html.
Followed current website model and full-design.png to begin adding the
header and top section of the landing page.

--- a/landing.html
+++ b/landing.html
@@ -6,6 +6,59 @@
     <title>Eirik Affleck</title>
 </head>
 <body>
+    <div id="header">
+        <img src=Eirik-logo.png alt="Eirik Affleck logo consisting or a 
+        letter A combined with a partial letter E.">
+
+        <a src="#about">About</a>
+        <a src="#demo-reel">Demo Reel</a>
+        <a src="#contact">Contact</a>
+
+
+
+    </header>
+
+    <div id="home">
+        <div class="left-home">
+        <h1>EIRIK AFFLECK</h1>
+        <h2>actor</h2>
+        <text>
+            <p><h3>Hi, I'm Eirik!</h3></p>
+            <p>From an early age, I’ve been inspired by the magic of performance. 
+                I earned my BFA in Acting from UVU and am constantly working to 
+                sharpen my craft. I believe that every character has a unique 
+                voice and a story worth telling, and I aspire to connect with 
+                audiences through genuine and compelling performances. I’m drawn 
+                to projects that challenge me and explore the complexities of 
+                human experience.</p>
+        </text>
+            <button>View / Download Headshot</button>
+            <button>View / Download Resume</button>
+        </div>
+
+        <div class="right-home">
+            <img src="top-Eirik.avif" alt="A pensive torso and bust photo of Eirik
+            in a long-sleeve black button-up with soft face lighting and a dark 
+            background."></a>
+        </div>
+
+    </div>
+
+    <div id="about">
+
+    </div>
+
+    <div class="demo-reel">
+
+    </div>
+
+    <div id="contact">
+
+    </div>
+
+    <footer>
+
+    </footer>
     
 </body>
 </html>
