Add information and demo reel html sections
Added several boxes with text inthe information section as well as
an image embedded with a link to Eirik's demo reel in the demo reel
section to better align solution.html with full-design.png.

--- a/landing.html
+++ b/landing.html
@@ -28,9 +28,7 @@
                 I earned my BFA in Acting from UVU and am constantly working to 
                 sharpen my craft. I believe that every character has a unique 
                 voice and a story worth telling, and I aspire to connect with 
-                audiences through genuine and compelling performances. I’m drawn 
-                to projects that challenge me and explore the complexities of 
-                human experience.</p>
+                audiences through genuine and compelling performances.</p>
         </text>
             <button>View / Download Headshot</button>
             <button>View / Download Resume</button>
@@ -45,10 +43,52 @@
     </div>
 
     <div id="about">
+        <h2>ABOUT</h2>
+
+        <div class="box">
+            <img src="instagram-logo.avif" alt="The Instagram logo - a small white
+            simplification of a Polaroid camera.">
+            <text>@eirik.affleck</text>
+
+        </div>
+
+        <div class="box">
+            <img src="bottom-Eirik-head.avif" alt="A pensive bust image of Eirik
+            looking directly at the viewer. He is wearing a dark button-up shirt, 
+            and the lighting is soft with a dark background.">
+            <text>I’m an Atlanta-based actor with experience across film, 
+                television, and theatre.</text>
+
+        </div>
+
+        <div class="box">
+            <img src="second-Eirik-head.avif" alt="An image of Eirik showing only
+            the shoulders and head. He is wearing a green shirt and smiling.">
+
+            <text>When I’m not acting, I’m exploring Atlanta’s arts scene, skiing 
+                when I can, and always on the hunt for a great sandwich. I’m 
+                excited about new opportunities to grow as an artist and to 
+                hopefully inspire others as I have been.</text>
+
+        </div>
+        
+
+        <div class="box">
+            <img src=Eirik-logo.png alt="Eirik Affleck logo consisting or a 
+        letter A combined with a partial letter E.">
+        <text>I’m drawn 
+                to projects that challenge me and explore the complexities of 
+                human experience.</text>
+
+        </div>
 
     </div>
 
     <div class="demo-reel">
+
+        <a href="https://youtu.be/Qk3xBOZYBrA"><img src="Demo-Reel-Cover.png"
+        alt="A black image with the orangewords Eirik Affleck written in the top 
+        third."></a>
 
     </div>
 
