Complete html and begin css to match full design
Completed the rough draft of the html to enable geginningn work for
the landing.css. Began implementing flex in CSS to better space and
visualize elements in making changes to align with full-design.png.

--- a/landing.html
+++ b/landing.html
@@ -6,17 +6,25 @@
     <title>Eirik Affleck</title>
 </head>
 <body>
-    <div id="header">
-        <img src=Eirik-logo.png alt="Eirik Affleck logo consisting or a 
-        letter A combined with a partial letter E.">
+    <div class="header">
+        <div class="logo">
 
-        <a src="#about">About</a>
-        <a src="#demo-reel">Demo Reel</a>
-        <a src="#contact">Contact</a>
+            <img src=Eirik-logo.png alt="Eirik Affleck logo consisting or a 
+        letter A combined with a partial letter E." height="50px" width="100px">
+
+        </div>
+
+        <div class="page-links">
+
+            <a src="#about">About</a>
+            <a src="#demo-reel">Demo Reel</a>
+            <a src="#contact">Contact</a>
+
+        </div>
 
 
 
-    </header>
+    </div>
 
     <div id="home">
         <div class="left-home">
@@ -75,7 +83,7 @@
 
         <div class="box">
             <img src=Eirik-logo.png alt="Eirik Affleck logo consisting or a 
-        letter A combined with a partial letter E.">
+        letter A combined with a partial letter E." height="200px" width="200px">
         <text>I’m drawn 
                 to projects that challenge me and explore the complexities of 
                 human experience.</text>
@@ -87,18 +95,28 @@
     <div class="demo-reel">
 
         <a href="https://youtu.be/Qk3xBOZYBrA"><img src="Demo-Reel-Cover.png"
-        alt="A black image with the orangewords Eirik Affleck written in the top 
-        third."></a>
+        alt="An image of two World War 2 soldiers sitting against an 
+        embankment."></a>
 
     </div>
 
     <div id="contact">
+        <div class="call-to-action">
+            <div class="left-call">
+                <h1>CONTACT</h1>
+                <text>801-696-7157</text>
+            </div>
+
+            <button>Email</button>
+        </div>
 
     </div>
 
-    <footer>
+    <div class="footer">
 
-    </footer>
+        <text>Copyright © Eirik Affleck 2024</text>
+
+    </div>
     
 </body>
 </html>
