Style header and home sections
Began styling header and home sections to bring spacing and colors
in alignment with full-design.png and color-and-fonts.png.

--- a/landing.html
+++ b/landing.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eirik Affleck</title>
+    <link rel="stylesheet" href="landing.css">
 </head>
 <body>
     <div class="header">
         <div class="logo">
 
             <img src=Eirik-logo.png alt="Eirik Affleck logo consisting or a 
-        letter A combined with a partial letter E." height="50px" width="100px">
+        letter A combined with a partial letter E." width="100px" height="50px">
 
         </div>
 
