--- a/landing.html
+++ b/landing.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eirik Affleck</title>
+    <title>Actor | Eirik Affleck</title>
     <link rel="stylesheet" href="landing.css">
 </head>
 <body>
     <div class="header">
         <div class="logo">
 
-            <img src=Eirik-logo.png alt="Eirik Affleck logo consisting or a 
-        letter A combined with a partial letter E." width="100px" height="50px">
+            <text>Eirik Affleck</text>
 
         </div>
 
@@ -39,8 +38,10 @@
                 voice and a story worth telling, and I aspire to connect with 
                 audiences through genuine and compelling performances.</p>
         </text>
-            <button>View / Download Headshot</button>
-            <button>View / Download Resume</button>
+            <div class="buttons">
+                <button>View / Download Headshot</button>
+                <button>View / Download Resume</button>
+            </div>
         </div>
 
         <div class="right-home">
