Alter header and home colors, sizes and spacing
Adjusted landing.css to bring landing.html into greater alignment
with full-design.png and color-and-fonts.png. This included altering
the colors, font sizes, and spacing in the header and home areas.

--- a/landing.html
+++ b/landing.html
@@ -28,10 +28,12 @@
 
     <div id="home">
         <div class="left-home">
-        <h1>EIRIK AFFLECK</h1>
-        <h2>actor</h2>
+            <div class="hero-main">
+                <text>EIRIK AFFLECK</text>
+            </div>
+        <text>actor</text>
         <text>
-            <p><h3>Hi, I'm Eirik!</h3></p>
+            <h3>Hi, I'm Eirik!</h3>
             <p>From an early age, I’ve been inspired by the magic of performance. 
                 I earned my BFA in Acting from UVU and am constantly working to 
                 sharpen my craft. I believe that every character has a unique 
