Replace Instagram logo and adjust picture sizes
The Instagram logo was too small to fit the sizing of its
neighboring boxes, and the other pictures were not sizing in
a uniform manner. The boxes in full-design.png are sized uniformly.

--- a/landing.html
+++ b/landing.html
@@ -59,7 +59,7 @@
         <div class="boxes">
         <div class="box">
             <div class="instagram">
-            <img src="instagram-logo.avif" alt="The Instagram logo - a small white
+            <img src="instagram-logo.png" alt="The Instagram logo - a small white
             simplification of a Polaroid camera.">
             </div>
             <text>@eirik.affleck</text>
@@ -93,7 +93,7 @@
         <div class="box">
             
             <img src=Eirik-logo.png alt="Eirik Affleck logo consisting or a 
-            letter A combined with a partial letter E." height="200px" width="200px">
+            letter A combined with a partial letter E.">
         
         <text>I’m drawn 
                 to projects that challenge me and explore the complexities of 
