Format various links and about sections and below
Altered numerous CSS style factors to bring the information section
and all sections below that into alignment with full-design.png.

--- a/landing.html
+++ b/landing.html
@@ -16,9 +16,9 @@
 
         <div class="page-links">
 
-            <a src="#about">About</a>
-            <a src="#demo-reel">Demo Reel</a>
-            <a src="#contact">Contact</a>
+            <a href="#about">About</a>
+            <a href="#demo-reel">Demo Reel</a>
+            <a href="#contact">Contact</a>
 
         </div>
 
@@ -55,7 +55,7 @@
     </div>
 
     <div id="about">
-        <h2>ABOUT</h2>
+        <text class="info-header">ABOUT</text>
         <div class="boxes">
         <div class="box">
             <div class="instagram">
@@ -103,7 +103,9 @@
         </div>
     </div>
 
-    <div class="demo-reel">
+    <div id="demo-reel">
+
+        <h1>DEMO REEL</h1>
 
         <a href="https://youtu.be/Qk3xBOZYBrA"><img src="Demo-Reel-Cover.png"
         alt="An image of two World War 2 soldiers sitting against an 
@@ -118,7 +120,7 @@
                 <text>801-696-7157</text>
             </div>
 
-            <button>Email</button>
+            <a href="mailto:affleckeirik@gmail.com"><button>Email</button></a>
         </div>
 
     </div>
